--- a/consept.css
+++ b/consept.css
@@ -7,6 +7,9 @@ html{
 body{
     color:#24292e;
     animation: fadeIn 2s ease 0s 1 normal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @keyframes fadeIn { 
